# ai-engine-direct-helper

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  startGenie.bat
Docs/: User_Guide.md
LibQNNHelper/: CMakeLists.txt  README.txt
PyQNNHelper/: CMakeLists.txt  QNNHelper.cpp  QNNHelper.h
QNNHelper/: __init__.py  qnncontext.py
QNNHelper/src/: CMakeLists.txt  QNNHelper.cpp
QNNHelper/src/pybind11/: README.md
SvcQNNHelper/: CMakeLists.txt
SvcQNNHelper/src/: main.cpp
SvcQNNHelper/src/Utils/: ShareMem.hpp  Utils.hpp
docs/: User Guide.md  genie_guide_en.md  genie_guide_zh.md  guide_en.md  guide_zh.md  python.md  python_arm64.md  tutorial.ipynb  user_guide.md
libQNNHelper/: CMakeLists.txt
libQNNHelper/src/: CMakeLists.txt  QnnSampleApp.cpp  QnnSampleApp.hpp  libQNNHelper.cpp  libQNNHelper.hpp
libQNNHelper/src/BackendExtensions/: BackendExtensions.hpp  IBackend.hpp  ICommandLineManager.hpp  Log.hpp
libQNNHelper/src/Log/: LogUtils.cpp  LogUtils.hpp  Logger.cpp  Logger.hpp
libQNNHelper/src/PAL/include/PAL/: Debug.hpp  FileOp.hpp
libQNNHelper/src/PAL/src/windows/: Path.cpp
libQNNHelper/src/Utils/: BuildId.hpp  DataUtil.cpp  DataUtil.hpp  IOTensor.cpp  IOTensor.hpp  QnnSampleAppUtils.cpp  QnnSampleAppUtils.hpp
libQNNHelper/src/WrapperUtils/: QnnWrapperUtils.cpp
make/: Android.mk  Application.mk
pybind/: AppBuilder.cpp  AppBuilder.h  CMakeLists.txt  GenieBuilder.cpp  GenieBuilder.h  common.h
samples/android/SuperResolution2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
samples/c++/real_esrgan_x4plus/: CMakeLists.txt  README.md  real_esrgan_x4plus.cpp
samples/genie/c++/Service/: .gitignore  CMakeLists.txt  GenieAPIClient.cpp  GenieAPIService.cpp  GenieBuilder.cpp  GenieBuilder.h  Makefile  Utils.h  gitignore.txt
samples/genie/c++/Service/docs/: USAGE.MD  VLM_DEPLOYMENT.MD
samples/genie/c++/Service/examples/GenieAPIClient/: CMakeLists.txt  GenieAPIClient.cpp  GenieAPIClient.py
samples/genie/c++/Service/examples/SampleApp/: CMakeLists.txt  SampleApp.cpp  SampleApp.hpp  platform_fix.h
samples/genie/c++/Service/examples/tools/: CMakeLists.txt  base64_decode.cpp  base64_encode.cpp  wav_recorder.cpp
samples/genie/c++/Service/make/: Android.mk  Application.mk
samples/genie/c++/Service/scripts/: Android.mk  Application.mk  platform.cmake  version.cmake  version.rc.in
samples/genie/c++/Service/src/: GenieAPIClient.cpp  GenieAPIService.cpp
samples/genie/c++/Service/src/GenieAPIService/: CMakeLists.txt  dependents.cmake  platform.cmake
samples/genie/c++/Service/src/GenieAPIService/src/: GenieAPILibrary.cpp  GenieAPILibrary.h  GenieAPIService.cpp  GenieAPIService.h  config.h  platform_fix.h
samples/genie/c++/Service/src/GenieAPIService/src/chat_history/: chat_history.cpp  chat_history.h
samples/genie/c++/Service/src/GenieAPIService/src/chat_request_handler/: chat_request_handler.cpp  chat_request_handler.h  model_input_builder.h  text_splitter.h
samples/genie/c++/Service/src/GenieAPIService/src/context/: context_base.cpp  context_base.h  genie.cpp  genie.h  genie_impl.h  genie_query_iface.cpp  llama_cpp.cpp  llama_cpp.h  mnn.cpp  mnn.h
samples/genie/c++/Service/src/GenieAPIService/src/context/qnn/: config_fixer.h  genie.cpp  genie.h  genie_interface.cpp  genie_interface.h
samples/genie/c++/Service/src/GenieAPIService/src/context/qnn/phi4mm/: phi4mm.cpp  phi4mm.h  phi4mm_image_processor.hpp
samples/genie/c++/Service/src/GenieAPIService/src/context/qnn/qwen2_5/: qwen25_image_processor.hpp  qwen_2_5.cpp  qwen_2_5.h
samples/genie/c++/Service/src/GenieAPIService/src/context/qnn/qwen2_5_omini/: qwen_2_5_omini.cpp  qwen_2_5_omini.h
samples/genie/c++/Service/src/GenieAPIService/src/context/qnn_img_helper/: phi4mm_image_processor.hpp  qwen25_image_processor.hpp
samples/genie/c++/Service/src/GenieAPIService/src/context/torch_helper/: base.h  img.h  shape_2d.h  shape_3d.h  shape_4d.h  shape_5d.h  shape_6d.h
samples/genie/c++/Service/src/GenieAPIService/src/model/: def.h  model_config.h  model_manager.cpp  model_manager.h
samples/genie/c++/Service/src/GenieAPIService/src/processor/: general.cpp  general.h  harmony.cpp  harmony.h  processor.h
samples/genie/c++/Service/src/GenieAPIService/src/response/: prompt.h  response_dispatcher.cpp  response_dispatcher.h  response_tools.cpp  response_tools.h
samples/genie/c++/Service/src/common/: base64.h  base_enum.h  log.h  utils.cpp  utils.h
samples/genie/c++/Service/src/context/: genie.cpp  genie.h  genie_iface.h  llama_cpp.cpp  llama_cpp.h  mnn.cpp  mnn.h
samples/genie/c++/Service/src/core/: chat_history.cpp  config.h  context_base.cpp  model_manager.cpp  utils.cpp
samples/genie/c++/Service/src/core/include/core/: chat_history.h  context_base.h  log.h  processor.h  response_dispatcher.h  utils.h
samples/genie/c++/Service/src/core/include/core/model/: def.h  model_config.h  model_manager.h
samples/genie/c++/Service/src/core/response/: response_dispatcher.cpp  response_tools.cpp  response_tools.h
samples/genie/c++/Service/src/processor/: general.cpp  general.h  harmony.cpp  harmony.h
samples/genie/c++/Service/test/: genietest.py
src/: CMakeLists.txt  LibAppBuilder.cpp  LibAppBuilder.hpp  Lora.cpp  Lora.hpp  QnnSampleApp.cpp  QnnSampleApp.hpp  QnnTypeMacros.hpp  SampleApp.hpp  main.cpp
src/Log/: LogUtils.cpp  LogUtils.hpp  Logger.cpp  Logger.hpp
src/PAL/include/PAL/: Directory.hpp  DynamicLoading.hpp  FileOp.hpp  GetOpt.hpp  Path.hpp  StringOp.hpp
src/PAL/src/common/: GetOpt.cpp  StringOp.cpp
src/PAL/src/linux/: Directory.cpp  DynamicLoading.cpp  FileOp.cpp  Path.cpp
src/PAL/src/windows/: Common.hpp  DynamicLoading.cpp
src/SVC/: CMakeLists.txt  main.cpp
src/SVC/Utils/: ShareMem.hpp  Utils.hpp
src/Utils/: BuildId.hpp  DataUtil.cpp  DataUtil.hpp  DynamicLoadUtil.cpp  DynamicLoadUtil.hpp  IOTensor.cpp  IOTensor.hpp  QnnDlcUtils.cpp  QnnDlcUtils.hpp  QnnSampleAppUtils.cpp  QnnSampleAppUtils.hpp
src/WrapperUtils/: QnnWrapperUtils.cpp  QnnWrapperUtils.hpp
(+511 files in other folders)
